Tests/testsuite/negative/merge_unknown_target.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
   name "merge unknown target";

   merge test => C; // E: Unknown node "C" used in target of "MergetestAtTopJunctionTargetC" transition
   #>)]
  public class example
  {
  }

